# kyc_automation

./: .dockerignore  .env.development  .env.example  .env.production  .env.staging  .gitignore  Dockerfile.frontend  README.md  bun.lockb  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts  wrangler.jsonc
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.mlflow  README.md  pyproject.toml  requirements-mlflow-ui.txt  requirements.txt  run.ps1
backend/app/: __main__.py  config.py  kyc_evidence_anchors.py  main.py  questions.py  schemas.py
backend/app/db/: models.py  rds_iam.py  session.py  submissions.py
backend/app/middleware/: request_logging.py
backend/app/routes/: history.py  intake.py  narrative.py  process.py  rag_observability.py
backend/app/services/: answer_section.py  blob_storage.py  (+20 more)
backend/config/: kyc_playbook.yaml
backend/scripts/: delete_all_but_latest_submission.py  start_mlflow_ui.py  start_mlflow_ui.sh
backend/sql/: add_reference_urls_column.sql
backend/tests/: test_answer_sources_cap.py  test_config_database.py  test_database_url_resolution.py  test_grounding_answer_sources.py  test_history_metrics.py  test_kyc_evidence_anchors.py  test_mlflow_tracing.py  test_playbook_path.py  test_rag_chunking.py  test_rag_explorer_helpers.py  test_rag_retrieve.py  test_rag_techniques.py  test_rds_iam.py  test_reference_urls.py  test_rerun_multipart.py  test_sec_filings_hub.py  test_source_urls.py  test_validate_question.py  test_validation_shard.py
(+100 files in other folders)
