[project]
name = "kyc-backend"
version = "0.1.0"
description = "FastAPI backend for the KYC automation prototype"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "google-genai>=1.0.0",
  "python-multipart>=0.0.9",
  "pypdf>=4.0.0",
  "python-docx>=1.1.0",
  "pillow>=10.0.0",
  "pydantic>=2.5.0",
  "python-dotenv>=1.0.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
